# scheduler_app

./: .gitignore  .pre-commit-config.yaml  CI.yml  Dockerfile  Dockerfile.prod  Dockerfile.test  README.md  docker-compose.yaml  folder_structure.txt  manage.py  mypy.ini  pyproject.toml  test.db3
api_v1/: urls.py
auth_api/: apps.py  serializers.py  urls.py  views.py
scheduler/: apps.py  models.py  permissions.py  serializers.py  tests.py  views.py
scheduler/migrations/: 0001_initial.py  0002_remove_schedule_time_slots_and_more.py  0003_schedule_user.py  0004_alter_schedule_user.py
scheduler_app/: asgi.py  settings.py  urls.py  wsgi.py
workflows/: CI.yml
